Fix user guide and change List.of to Arrays.asList to be compatible with java 8